feat: seo and icons

--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%//apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%//favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="a look into who you is"
     />
+
+      <!-- SEO Tags -->
+      <title>Your Page Title</title>
+      <meta name="keywords" content="developer, computer-science, portfolio" />
+      <link rel="canonical" href="https://yougao.dev/" />
+      
+      <!-- Open Graph Tags -->
+      <meta property="og:title" content="you's site" />
+      <meta property="og:description" content="a look into who you is" />
+      <meta property="og:image" content="/favicon-32x32.png" />
+      <meta property="og:url" content="https://yougao.dev/" />
+      <meta property="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
