feat: larger logo

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <!-- Open Graph Tags -->
       <meta property="og:title" content="you's site" />
       <meta property="og:description" content="a look into who you is" />
-      <meta property="og:image" content="/favicon-32x32.png" />
+      <meta property="og:image" content="/logo_300.png" />
       <meta property="og:url" content="https://yougao.dev/" />
       <meta property="og:type" content="website" />
     <!--
