chore: updated meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
       <link rel="canonical" href="https://yougao.dev/" />
       
       <!-- Open Graph Tags -->
-      <meta property="og:title" content="you's site" />
+      <meta property="og:site_name" content="you's site" />
+      <meta property="og:title" content="come on in" />
       <meta property="og:description" content="a look into who you is" />
       <meta property="og:image" content="/logo_300.png" />
       <meta property="og:url" content="https://yougao.dev/" />
